fix z-index on nav

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@
     margin-bottom:50px;
     position:fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .to-do-link{
